@@ -71,14 +71,8 @@ http://rt.cpan.org/Public/Dist/Display.html?Name=CGI-Cache
 COPYRIGHT
 
 Copyright (c) 1998-Sep 1 2000 Broc Seib. Copyright (c) Sep 1 2000-2015 David
-Coppit. All rights reserved, save those granted by the license.
-
-
-LICENSE
-
-This code is distributed under the GNU General Public License (GPL). See the
-file LICENSE in the distribution, http://www.opensource.org/gpl-license.html,
-and http://www.opensource.org/.
+Coppit. All rights reserved, save those granted by the license. See the file
+LICENSE for licensing terms.
 
 
 AUTHOR
